Updated code from IntelliJ